journey content should now be aligned correctly

--- a/css/cs33.css
+++ b/css/cs33.css
@@ -1093,18 +1093,22 @@ body {
 .workplace {
   padding-top: 50px;
   display: flex;
-  align-items: center;
-  justify-content: center
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
 }
 .workplace img {
-  /* height: 130px; */
-  height: auto;
   /* width: 170px; */
-  width: 400px;
-  float: left;
+  width: 200px;
+  /* height: 130px; */
+  height: 153px;
+  object-fit: cover;
+  vertical-align: top;
+  /* float: left; */
 }
-.workplace p {
+.workplace-content {
   /* padding-left: 200px; */
+  margin-left: 5%;
   width: 60%;
 }
 
@@ -1113,13 +1117,16 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
   .workplace img {
     width: 80%;
     height: auto;
   }
-  .workplace p {
+  .workplace-content {
     width: 80%;
+    margin-left: 0%;
+    margin-top: 5%;
   }
 }
 
@@ -1127,6 +1134,9 @@ body {
 
 
 
+
+/* 
+for reference:
 @media screen and (min-width: 768px) {
   .p-section h1 {
     font-size: 8rem;
@@ -1134,5 +1144,5 @@ body {
   .parallax h1 {
     font-size: 4rem;
   }
-}
+} */
 
